--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,28 @@ name: CI / CD
 on: [push, pull_request]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:      
-      - uses: actions/checkout@v2
-      - run: |
-          sudo apt-get install -y libgeos-c1v5
-      - uses: actions/setup-python@v1
-        with: 
-          python-version: '3.9.x'
-      - run: |
-          pip install -U pip poetry
-          poetry install -E shapely
-        env:
-          POETRY_VIRTUALENVS_CREATE: false
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:      
+  #     - uses: actions/checkout@v2
+  #     - run: |
+  #         sudo apt-get install -y libgeos-c1v5
+  #     - uses: actions/setup-python@v1
+  #       with: 
+  #         python-version: '3.9.x'
+  #     - run: |
+  #         pip install -U pip poetry
+  #         poetry install -E shapely
+  #       env:
+  #         POETRY_VIRTUALENVS_CREATE: false
       
-      - name: Run Tests
-        run: poetry run py.test
+  #     - name: Run Tests
+  #       run: poetry run py.test
 
   build:
     strategy:
       matrix:
-        os: [ubuntu, windows, macos]
+        os: [windows]
     defaults:
       run:
         shell: bash
@@ -49,15 +49,15 @@ jobs:
           path: |
             dist
 
-  release:
-    runs-on: ubuntu-latest
-    needs: [test, build]
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - uses: actions/download-artifact@v2
+  # release:
+  #   runs-on: ubuntu-latest
+  #   needs: [test, build]
+  #   if: startsWith(github.ref, 'refs/tags/')
+  #   steps:
+  #     - uses: actions/download-artifact@v2
       
-      - name: Release tags
-        uses: softprops/action-gh-release@v1
-        with:
-         files: |
-           */preprocess_cancellation-*.zip
+  #     - name: Release tags
+  #       uses: softprops/action-gh-release@v1
+  #       with:
+  #        files: |
+  #          */preprocess_cancellation-*.zip
